--- a/001_helloworld/src/app/globals.css
+++ b/001_helloworld/src/app/globals.css
@@ -26,3 +26,7 @@ body {
 .menulink-active {
     @apply text-black border-b-2 border-black
 }
+
+.productcard {
+    @apply cursor-pointer flex flex-col shadow-xl m-2 p-4 pt-8 w-64 gap-2 hover:border-gray-200 border border-white
+}
